--- a/templates/new.html
+++ b/templates/new.html
@@ -1,1 +1,10 @@
-News
+Here are the top stories
+<ul>
+  <li ng-repeat="story in vm.stories"> {{ story }} </li>
+</ul>
+<ul class="topstories">
+  <li><i class="upvote fa fa-chevron-circle-up" aria-hidden="true"></i><i id="score">score</i> <a href="#" id="article_a">article</a>  <i class="fa fa-clock-o" aria-hidden="true" id="time">time</i>  <i class="comments fa fa-comments-o" aria-hidden="true"><a href="#" id="comments_a"> 41</a></i></li>
+</ul>
+<script>
+
+</script>
