--- a/templates/main.html
+++ b/templates/main.html
@@ -1,1 +1,6 @@
-Main
+<div id="welcome">
+  <div class="block">
+    <h1 class="welcome-text">Hacker News</h1>
+    <div class="welcome-text">Expose Yourself to the World.</div>
+  </div>
+</div>
