--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ a {color:#fff; text-decoration:none;}
 .logo { margin-top:25px; }
 
 /* TopBar */
-.top-bar { width: 100%; background-color: #2d2c2c; border-bottom:2px solid #3a3a3a; position: absolute; top: 0px; height: 61px; z-index: 900; }
+.top-bar { width: 100%; background-color: #2d2c2c; border-bottom:2px solid #3a3a3a; position: fixed; top: 0px; height: 61px; z-index: 900; }
 .submit-btn { position: fixed; padding: 7px; border-radius: 3px; border: 2px solid #ff6602; width: 120px; margin: 12px 15px; right: 0; font-size: 0.8rem; text-transform: uppercase; cursor: pointer; }
 .submit-btn:hover { background-color:#ff6602;}
 .toggle-nav { float: left; margin: 20px 0 0 15px;}
@@ -67,7 +67,7 @@ a {color:#fff; text-decoration:none;}
 .leftSidebarContent > .sidebar-brand a:hover { color: #fff; background: none; }
 
 /* ---------- WELCOME PAGE STYLES ---------- */
-#welcome { background:url(../img/BodyBG.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; text-align: text-center; }
+#welcome { background:url(../img/BodyBG.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover; text-align: text-center; width:100%; height: 100%; position: absolute; margin: -75px -15px; }
 #welcome .block { position: absolute; top: 50%; left: 50%; -moz-transform: translateX(-50%) translateY(-50%); -webkit-transform: translateX(-50%) translateY(-50%); transform: translateX(-50%) translateY(-50%); }
 .welcome-text { text-align: center; margin-left:-300px; }
 
